Refine CORS configuration for security settings